--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,56 @@
-.App {
-  text-align: center;
+body,
+html {
+    background: #ecf0f1;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+.center {
+    background: #fff;
+    padding: 5px;
+    display: flex;
+    /* flex-wrap: wrap; */
+    width: 800px;
+    height: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.leftSide {
+    /* display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 655px;
+    padding: 25px 15px 5px 5px;
+    align-content: center;
+    justify-content: space-evenly; */
 }
 
-.App-link {
-  color: #61dafb;
+
+.rightSide {
+    /* display: flex;
+    flex-direction: column;
+    flex: 0 0 195px;
+    padding: 15px;
+    justify-content: space-around; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bottomleft {
+    /* display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly; */
+}
+
+.topleft {
+   display: flex;
+   justify-content: flex-start;
+}
+
+.bottomright {
+    /* display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly; */
 }
